--- a/index.html
+++ b/index.html
@@ -114,6 +114,14 @@
     </header>
 
     <main class="section" id="about">
+      <nav class="breadcrumb" aria-label="breadcrumbs">
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li class="is-active">
+            <a href="#" aria-current="page">About us</a>
+          </li>
+        </ul>
+      </nav>
       <a href="#keyFeatures" class="visually-hidden" tabindex="0">
         Skip Section About
       </a>
