fix: fix issues in siteimprove

--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
       </a>
       <div class="section-heading has-text-centered">
         <h2 class="title is-2">About Us</h2>
-        <h5 class="subtitle is-5">We of all trades, master of "some"</h5>
+        <h3 class="subtitle is-5">We of all trades, master of "some"</h3>
         <div class="container">
           <p>
             Web developers with more than <strong>4 years</strong> of
@@ -316,7 +316,7 @@
       <div class="container features">
         <div class="section-heading has-text-centered">
           <h2 class="title is-2">Three key features</h2>
-          <h5 class="subtitle is-5">We don't hide what we do</h5>
+          <h3 class="subtitle is-5">We don't hide what we do</h3>
         </div>
 
         <div class="columns">
@@ -388,7 +388,7 @@
       <div class="hero-body">
         <div class="container">
           <h2 class="title">List of topics</h2>
-          <h5 class="subtitle">We are always in touch we the outside world</h5>
+          <h3 class="subtitle">We are always in touch we the outside world</h3>
         </div>
       </div>
       <div class="tabs is-boxed is-centered main-menu" id="nav">
@@ -603,7 +603,7 @@
       <div class="container has-text-centered">
         <div class="section-heading has-text-centered">
           <h2 class="title is-2">Upcoming events</h2>
-          <h5 class="subtitle is-5">Outcoming dates for the best options</h5>
+          <h3 class="subtitle is-5">Outcoming dates for the best options</h3>
         </div>
 
         <div class="tile is-ancestor">
@@ -616,7 +616,7 @@
                 />
               </div>
               <h2 class="title">New York</h2>
-              <h5 class="subtitle">Fri 27 Nov 2016</h5>
+              <h3 class="subtitle">Fri 27 Nov 2016</h3>
               <button class="button">Buy Tickets</button>
             </div>
           </div>
@@ -626,7 +626,7 @@
                 <img src="./img/access.jpg" alt="Los Angeles Event" />
               </div>
               <h2 class="title">Los Angeles</h2>
-              <h5 class="subtitle">Fri 27 Nov 2016</h5>
+              <h3 class="subtitle">Fri 27 Nov 2016</h3>
               <button class="button">Buy Tickets</button>
             </div>
           </div>
@@ -636,7 +636,7 @@
                 <img src="./img/dotcss-2019.jpg" alt="Mexico event" />
               </div>
               <h2 class="title">Mexico</h2>
-              <h5 class="subtitle">Fri 27 Nov 2016</h5>
+              <h3 class="subtitle">Fri 27 Nov 2016</h3>
               <button class="button">Buy Tickets</button>
             </div>
           </div>
@@ -649,7 +649,7 @@
                 <img src="./img/images.jpg" alt="Paris Event" />
               </div>
               <h2 class="title">Paris</h2>
-              <h5 class="subtitle">Fri 27 Nov 2016</h5>
+              <h3 class="subtitle">Fri 27 Nov 2016</h3>
               <button class="button">Buy Tickets</button>
             </div>
           </div>
@@ -662,7 +662,7 @@
                 />
               </div>
               <h2 class="title">Minsk</h2>
-              <h5 class="subtitle">Fri 27 Nov 2016</h5>
+              <h3 class="subtitle">Fri 27 Nov 2016</h3>
               <button class="button">Buy Tickets</button>
             </div>
           </div>
@@ -672,7 +672,7 @@
                 <img src="./img/access.jpg" alt="London event" />
               </div>
               <h2 class="title">London</h2>
-              <h5 class="subtitle">Fri 27 Nov 2016</h5>
+              <h3 class="subtitle">Fri 27 Nov 2016</h3>
               <button class="button">Buy Tickets</button>
             </div>
           </div>
@@ -683,7 +683,7 @@
     <section class="section" id="services">
       <div class="section-heading has-text-centered">
         <h2 class="title is-2">Services</h2>
-        <h5 class="subtitle is-5">What can I do for you?</h5>
+        <h3 class="subtitle is-5">What can I do for you?</h3>
       </div>
       <div class="container">
         <div class="columns">
@@ -691,7 +691,7 @@
             <a target="_blank" class="box" href="#services" tabindex="0">
               <span class="visually-hidden"> opens in a new window </span>
               <div class="content">
-                <h5 class="title is-5">Front End Web Development</h5>
+                <h4 class="title is-5">Front End Web Development</h4>
                 Develop Front End using latest standards with HTML5/CSS3 with
                 added funtionality using JavaScript and Vue.js.
               </div>
@@ -701,7 +701,7 @@
             <a target="_blank" class="box" href="#services" tabindex="0">
               <span class="visually-hidden"> opens in a new window </span>
               <div class="content">
-                <h5 class="title is-5">Back End Web Development</h5>
+                <h4 class="title is-5">Back End Web Development</h4>
                 Develop Back End application/service using Node.js or ASP .NET
                 and SQL server or Mongo DB databases.
               </div>
@@ -714,7 +714,7 @@
             <a target="_blank" class="box" href="#services" tabindex="0">
               <span class="visually-hidden"> opens in a new window </span>
               <div class="content">
-                <h5 class="title is-5">Front End Web Development</h5>
+                <h4 class="title is-5">Front End Web Development</h4>
                 Develop Front End using latest standards with HTML5/CSS3 with
                 added funtionality using JavaScript and Vue.js.
               </div>
@@ -724,7 +724,7 @@
             <a target="_blank" class="box" href="#services" tabindex="0">
               <span class="visually-hidden"> opens in a new window </span>
               <div class="content">
-                <h5 class="title is-5">Back End Web Development</h5>
+                <h4 class="title is-5">Back End Web Development</h4>
                 Develop Back End application/service using Node.js or ASP .NET
                 and SQL server or Mongo DB databases.
               </div>
@@ -745,7 +745,7 @@
             <div class="column is-4">
               <div class="card">
                 <div class="card-header">
-                  <h4 class="card-header-title">
+                  <h3 class="card-header-title">
                     <span>Admin <small>(Light)</small></span>
                     <span class="is-pulled-right">
                       <a href="#" tabindex="0">
@@ -754,7 +754,7 @@
                       <span class="tag is-default">Desktop</span>
                       <span class="tag is-danger">WIP</span>
                     </span>
-                  </h4>
+                  </h3>
                 </div>
                 <div class="card-content">
                   <div class="image">
@@ -770,7 +770,7 @@
             <div class="column is-4">
               <div class="card">
                 <div class="card-header">
-                  <h4 class="card-header-title">
+                  <h3 class="card-header-title">
                     <span>Cards</span>
                     <span class="is-pulled-right">
                       <a href="#" tabindex="0">
@@ -779,7 +779,7 @@
                       <span class="tag is-default">Desktop</span>
                       <span class="tag is-default">?</span>
                     </span>
-                  </h4>
+                  </h3>
                 </div>
                 <div class="card-content">
                   <div class="image">
@@ -795,7 +795,7 @@
             <div class="column is-4">
               <div class="card">
                 <div class="card-header">
-                  <h4 class="card-header-title">
+                  <h3 class="card-header-title">
                     <span>Forum</span>
                     <span class="is-pulled-right">
                       <a href="#" tabindex="0">
@@ -804,7 +804,7 @@
                       <span class="tag is-default">Desktop</span>
                       <span class="tag is-default">Mobile</span>
                     </span>
-                  </h4>
+                  </h3>
                 </div>
                 <div class="card-content">
                   <div class="image">
@@ -822,7 +822,7 @@
             <div class="column is-4">
               <div class="card">
                 <div class="card-header">
-                  <h4 class="card-header-title">
+                  <h3 class="card-header-title">
                     <span>InstaAlbum</span>
                     <span class="is-pulled-right">
                       <a href="#" tabindex="0">
@@ -831,7 +831,7 @@
                       <span class="tag is-default">Desktop</span>
                       <span class="tag is-default">Mobile</span>
                     </span>
-                  </h4>
+                  </h3>
                 </div>
                 <div class="card-content">
                   <div class="image">
@@ -903,9 +903,9 @@
       <div class="container">
         <div class="section-heading has-text-centered">
           <h2 class="title is-2">Forum</h2>
-          <h5 class="subtitle is-5">
+          <h3 class="subtitle is-5">
             Discuss any topic with no leaving this page
-          </h5>
+          </h3>
         </div>
 
         <div class="columns">
@@ -1112,7 +1112,7 @@
       <div class="container">
         <div class="section-heading has-text-centered">
           <h2 class="title is-2">Contact us</h2>
-          <h5 class="subtitle is-5">Don't hesitate, ask anything</h5>
+          <h3 class="subtitle is-5">Don't hesitate, ask anything</h3>
         </div>
 
         <form class="column is-half is-offset-one-quarter box">
@@ -1379,10 +1379,18 @@
 
         <div class="content has-text-centered">
           <div class="soc">
-            <a href="#" tabindex="0"><i class="fab fa-github-alt fa-2x"></i></a>
-            <a href="#" tabindex="0"><i class="fab fa-youtube fa-2x"></i></a>
-            <a href="#" tabindex="0"><i class="fab fa-facebook fa-2x"></i></a>
-            <a href="#" tabindex="0"><i class="fab fa-twitter fa-2x"></i></a>
+            <a href="#" tabindex="0" aria-label="Github">
+              <i class="fab fa-github-alt fa-2x"></i>
+            </a>
+            <a href="#" tabindex="0" aria-label="Youtube">
+              <i class="fab fa-youtube fa-2x"></i>
+            </a>
+            <a href="#" tabindex="0" aria-label="Facebook">
+              <i class="fab fa-facebook fa-2x"></i>
+            </a>
+            <a href="#" tabindex="0" aria-label="Twitter">
+              <i class="fab fa-twitter fa-2x"></i>
+            </a>
           </div>
           <p>
             The source code is licensed
