feat: add JS changes

--- a/index.html
+++ b/index.html
@@ -88,6 +88,14 @@
             <div class="subtitle has-text-white">
               Would you like to get the latest news?
             </div>
+            <div
+              id="notification"
+              aria-label="Notifications"
+              role="region"
+              aria-live="polite"
+            >
+              Notification count 0
+            </div>
             <div class="box">
               <form class="field is-grouped">
                 <p class="control is-expanded">
@@ -469,7 +477,7 @@
                 </div>
                 <div class="card-content">
                   <div class="content">
-                    <div>Click on image above</div>
+                    <div class="visually-hidden">Click on image above</div>
                     <p>
                       Purus semper eget duis at tellus at urna condimentum
                       mattis. Non blandit massa enim nec. Integer enim neque
@@ -496,7 +504,9 @@
                 </div>
                 <div class="card-content">
                   <div class="content">
-                    <div>Tempor orci dapibus ultrices in.</div>
+                    <div class="visually-hidden">
+                      Tempor orci dapibus ultrices in.
+                    </div>
                     <p>
                       Ut venenatis tellus in metus vulputate. Amet consectetur
                       adipiscing elit pellentesque. Sed arcu non odio euismod
@@ -529,7 +539,7 @@
                 </div>
                 <div class="card-content">
                   <div class="content">
-                    <div>Click anywhere on card</div>
+                    <div class="visually-hidden">Click anywhere on card</div>
                     <p>
                       Imperdiet dui accumsan sit amet nulla facilisi morbi.
                       Fusce ut placerat orci nulla pellentesque dignissim enim.
